# synq

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: synq.proto
src/: main.rs
src/broadcast/: broadcast.rs  constants.rs  mod.rs
src/client/: client.rs  mod.rs
src/clipboard/: clipboard.rs  mod.rs  watch.rs
src/config/: config.rs  constants.rs  mod.rs
src/configure/: configure.rs  constants.rs  mod.rs  prompt.rs  utils.rs
src/constants/: mod.rs
src/crypto/: crypto.rs  mod.rs  store.rs  utils.rs
src/daemon/: clipboard.rs  constants.rs  daemon.rs  mod.rs  monitor.rs  receiver.rs  scroll.rs  sender.rs
src/errors/: core.rs  errors.rs  kinds.rs  mod.rs  tracing.rs
src/scroll/: blocker.rs  constants.rs  device.rs  event.rs  mod.rs  receiver.rs  scroll.rs  sender.rs  utils.rs
src/server/: mod.rs  server.rs
src/synq/: mod.rs  synq.rs  synq.tonic.rs
src/transport/: active.rs  clipboard.rs  constants.rs  mod.rs  scroll.rs  server.rs  transport.rs
src/utils/: misc.rs  mod.rs
