[package]
name = "synq"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
backtrace = "0.3.76"
futures = "0.3.31"
prost = "0.14.1"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "signal"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-prost-build = "0.14.1"
