[package]
name = "synq"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
backtrace = "0.3.76"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
prost = "0.14.1"
rayon = "1.11.0"
saphyr = "0.0.6"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.11"
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "signal", "fs"] }
tokio-stream = "0.1.17"
tonic = "0.14.1"
tonic-prost = "0.14.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
x11rb = { version = "0.13.2", features = ["xfixes"] }

[build-dependencies]
tonic-prost-build = "0.14.1"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
panic = "unwind"
